[tool.poetry]
name = "ec2grep"
version = "0.1.0"
description = "CLI tool for working with EC2"
authors = ["Roey Berman <roey.berman@gmail.com>"]

[tool.poetry.scripts]
ec2grep = "ec2grep:cli"

[tool.poetry.dependencies]
python = "^3.6"
boto3 = "^1.16.35"
click = "^7.1.2"
six = "^1.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
